# hbs-table-extractor

./: .gitignore  Cargo.toml
rust_parser/: Cargo.toml
rust_parser/src/: lib.rs
src/: lib.rs  main.rs  pdf_parser.rs  pdf_schedule_parser.rs
tabula_pdf_parser/: Cargo.toml
tabula_pdf_parser/src/: lib.rs
