[package]
name = "vertretungsplan_extractor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.26.0"
geo = "0.18.0"
encoding_rs = "0.8.28"
serde_json = "1.0.68"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.127", features = ["default", "derive"] }